@@ -16,9 +16,6 @@ Enhancements for PPL 0.7
   set_GMP_memory_allocation_functions().  More generally, explain how
   to have memory-guarded computations.
 - Completely rewrite the handling of temporary coefficients.
-- Make sure ppl_lcdd is able to parse problems produced by lrs, i.e.,
-  where the number of rows of the matrix is omitted and replaced by
-  "*****".
 - Better explain the tradeoff in the choice between C_ and NNC_Polyhedron.
 - Investigate again all XFAILS.
 - Explain the ordering of the arguments in the widening methods.
